# NovaAI-Hackethon-openenv

./: Dockerfile  README.md  inference.py  log.txt  openenv.yaml  pyproject.toml  requirements.txt  run_tests.py  server.py  t2  test.py  test_log.txt  test_output.txt
data/: generator.py
env/: environment.py  models.py  models_compat.py
graders/: __init__.py  graders.py
supply-chain-ui/: package-lock.json  package.json
supply-chain-ui/src/: Dashboard.jsx
