[project]
name = "supply-chain-env"
version = "1.0.0"
description = "Supply Chain Disruption Triage RL Environment"
authors = [
    { name = "MAYANK CHOUHAN", email = "kmmayank08@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.7.4",
    "openai>=1.40.0",
    "requests>=2.32.3",
    "python-multipart>=0.0.9",
    "yfinance",
    "openenv-core>=0.2.0",
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
server = "server.app:main"

[project.entry-points."openenv.graders"]
supply-chain-disruption-triage = "graders:GRADERS"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
